k8s/jwts/consul/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
   name: http-route
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /bender
    # filters:
    #- type: ExtensionRef
        # extensionRef:
        #   group: consul.hashicorp.com
        #   kind: RouteRetryFilter
        #   name: retry-filter
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: bender
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /zoidberg
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: zoidberg
      port: 8081
  - matches:
    - path:
        type: PathPrefix
        value: /nibbler
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: nibbler
      port: 8082
